# goit-py_web-hw-04

./: Dockerfile  main.py  pyproject.toml
templates/: error.html  index.html  message.html
