[tool.poetry]
name = "goit-py-web-hw-04"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = "0.114.0"
uvicorn = "0.30.6"
jinja2 = "3.1.4"
aiofiles = "24.1.0"
python-multipart = "0.0.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
